# ChangeLog for sys-cluster/rgmanager
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/rgmanager/ChangeLog,v 1.8 2007/04/26 06:43:29 dberkholz Exp $

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

*rgmanager-1.04.00 (10 Mar 2007)

  10 Mar 2007; Christian Zoffoli <xmerlin@gentoo.org>
  rgmanager-1.02.00-r1.ebuild, rgmanager-1.03.00.ebuild,
  +rgmanager-1.04.00.ebuild:
  Version bump.

*rgmanager-1.03.00 (15 Oct 2006)

  15 Oct 2006; Christian Zoffoli <xmerlin@gentoo.org>
  -rgmanager-1.02.00.ebuild, +rgmanager-1.03.00.ebuild:
  Ebuild cleanup, some improvements, version bump.

  25 Aug 2006; Christian Zoffoli <xmerlin@gentoo.org>
  rgmanager-1.02.00-r1.ebuild:
  Stable x86.

*rgmanager-1.02.00-r1 (14 Jul 2006)

  14 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org>
  +files/rgmanager-1.02.00-20060713-cvs-clunfslock.patch,
  +rgmanager-1.02.00-r1.ebuild:
  1.02.00 updated to current stable.

*rgmanager-1.02.00 (13 Jul 2006)

  13 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> +files/rgmanager.conf,
  +files/rgmanager.rc, -rgmanager-1.00.00.ebuild, +rgmanager-1.02.00.ebuild:
  Ebuild cleanup, fixed bug #139991, added gentoo init script (thanks to Ramon
  <ramon@vanalteren.nl>).

*rgmanager-1.00.00 (01 Jul 2005)

  01 Jul 2005; Christian Zoffoli <xmerlin@gentoo.org>
  -files/rgmanager-1.9.4-errno.patch, +rgmanager-1.00.00.ebuild,
  -rgmanager-1.9.4.ebuild:
  1.00.00 tree in portage. Removed old ebuilds.

*rgmanager-1.9.4 (10 Mar 2005)

  10 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> +metadata.xml,
  +files/rgmanager-1.9.4-errno.patch, +rgmanager-1.9.4.ebuild:
  added to portage
