@@ -9,18 +9,20 @@ AUX rgmanager-2.0x.rc 1991 RMD160 e770fd8805afee61e13f5fb8851b77c22258b1cc SHA1 
 DIST cluster-1.02.00.tar.gz 1356451 RMD160 e9c0cdd1f5a7542c8a4ea38ccf6d057767269dc5 SHA1 d74cadb1ef21d1cfda333b20d7ef20272e0002d6 SHA256 de45885146f1481808f7a34af5e6b7e2042895a4e3844eaa6161f942345c7849
 DIST cluster-1.03.00.tar.gz 1658274 RMD160 6fc16e2edba73dd1a83ecfad749b1553eca6d938 SHA1 c205d8ec034433c33f26724f7f69b0028d2a63d4 SHA256 e61c2438c7ee8d546aec9dd86ee1851c9a71f127c25ad1fb0c59eb4ed534e97b
 DIST cluster-1.04.00.tar.gz 1663798 RMD160 5b241f38123c9ad65faf2a9eda7aa3e2dabee839 SHA1 af3bb244a11a6a26c31b142009f6c1f771799337 SHA256 6f4b48e67383681ea6ad6e2907b56e755049816186375c4f2bcb9482da31c2c2
-DIST cluster-2.02.00.tar.gz 8316680 RMD160 3d054699b91f57d8b07d7013dd718a7662d712aa SHA1 8471618222882427ca395f098695c33d2466559c SHA256 c68a62b49780a59dcf075e57fc2aac4524dd27e63ad80c8a2f1313307bca9498
+DIST cluster-2.02.00.tar.gz 1764851 RMD160 b5a56a0ae69c2959c85e5e89319f96c974d8efb1 SHA1 c86510ed8be84704271c10466cd5a4732eb5f6c9 SHA256 92117aa02d17cdde9ae7d6e71c2b12314a99e24e90f131c491e97d8fbda52196
+DIST gfs-2.02.00-20080323-cvs.patch.bz2 25743 RMD160 648b85f02231bd81a8cfcc6a334d70b76a445780 SHA1 3061d9b4a703dd582b30fc60b981f5a8c2fc863d SHA256 699297ea985d7eb69c94c27d0cb661187047afe56110b88bab68afdf15f1b072
 DIST rgmanager-1.02.00-20060713-cvs.patch.gz 26622 RMD160 2f76a39632fb4d0054ec17def2bd7f380ce2d74d SHA1 71a22b0204f81bebf3ef1c78a6d5f0d0ab8b5f41 SHA256 b52f065c8320cb4e643ca43ced1462bacff53de9db04a94dbb7120201d97d760
 EBUILD rgmanager-1.02.00-r1.ebuild 1312 RMD160 c02a3523786609fc3f2c0fe7664d5b81a322826d SHA1 85c7bb013a8ff88fa054937fc5edbcf12a417a15 SHA256 a903a14c50f6a32297c59bf5e94286298497b3dd182e7a1cc0ab342c026efc9f
 EBUILD rgmanager-1.03.00.ebuild 993 RMD160 8a78293ce451c06d49c270024023a1ac580736c5 SHA1 59d953d05baca76bebb3d5a859b6bb4a0bf4ca66 SHA256 d74714a4aa5315a86967b3e176790080d10bdc5660a5b3986aea14bc8ab67f00
 EBUILD rgmanager-1.04.00.ebuild 993 RMD160 5d7ee9a54777b78d8f7f8b2d35edae8c85e2e57e SHA1 c22071c60f9e46236d829de32f5b78d07139645c SHA256 53015daabcb9f420d0ed71d8adf4a9740ecb4215f3430f993ce2fe848245f752
+EBUILD rgmanager-2.02.00-r1.ebuild 1942 RMD160 e8f948fc967e53a81306bb0b301d01149b31a9f4 SHA1 5491a82d97770594a20a1eae419ddcded820d46a SHA256 ee26f2a67f940989af45f5cfb48a48bf870d84f455e25a1202434d51668032e7
 EBUILD rgmanager-2.02.00.ebuild 1663 RMD160 6ae9ef98194e0c0eb85013e5ec8bef37ac0a55b4 SHA1 7810505dbee7c1a80b2525ae96ebe5af4d10c149 SHA256 12bd156c7b53b7b22f7d4267497c2bf56eecc489a22bd43f57063e1097acf1ef
-MISC ChangeLog 1763 RMD160 b9b38db7188215276f4c86d7a2ff4edbde676eb6 SHA1 447b55d9969447314a2dd320214e509ac7de99e3 SHA256 64193d6b2b76799ab30258efae0f919c6cdda79a44024d05049f2537627a2445
+MISC ChangeLog 1924 RMD160 7780b33f88adcd660c8a32dd05ccaffb6a7223da SHA1 7735cb390262cceeac8287d6b56c9c51016c7b8d SHA256 c06a5195c84014f65ea35bd3be7d2fcda8377103233e8481f6c0af3cfd531d48
 MISC metadata.xml 229 RMD160 4dcf17b88c5f4db2e817f473f3e8269b0bff2e6e SHA1 e6315be43241c55bdc0d12a42fa05632c5ff9b79 SHA256 49e13d2d49bef7298e3bb665ebeceeff9b0880fae5ff639cb8405993504f244f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFH3qbggMUyd/cdjWsRAhJXAJ9lP7mYLUiMYCh/qa4KS3tYA4PhnwCfV0cT
-+4itRDT5Vcfqa4Uh7ku3vcY=
-=Q4OO
+iD8DBQFH5pF7gMUyd/cdjWsRAvEOAKCH9ZcghCe4AYCKvJLa6UpDg2T9kACfUQ35
+kUrCF3mWlXDvNMBx1PoltXQ=
+=pBuI
 -----END PGP SIGNATURE-----
