@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/rgmanager
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/rgmanager/ChangeLog,v 1.8 2007/04/26 06:43:29 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/rgmanager/ChangeLog,v 1.9 2008/03/23 17:20:51 xmerlin Exp $
+
+*rgmanager-2.02.00-r1 (23 Mar 2008)
+
+  23 Mar 2008; Christian Zoffoli <xmerlin@gentoo.org>
+  +rgmanager-2.02.00-r1.ebuild:
+  Updated 2.02.00 to STABLE2 20080323.
 
   26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update for cluster herd split to hp-cluster and ha-cluster.
